<resources>
    <string name="content_error_msg">Contenido nulo</string>
    <string name="vote_canceled_receipt_lbl">Recibo de anulación de voto</string>
    <string name="save_cancelation_receipt_lbl">Guardar recibo de la cancelación</string>
    <string name="loading_data_msg">Cargando datos, por favor espere</string>
    <string name="sending_data_caption">Por favor, espere</string>
    <string name="sending_data_lbl">Enviando información ... </string>
    <string name="back_to_cancel_lbl">Pulsar \'atrás\' para cancelar</string>
    <string name="manifest_pendind_lbl">Manifiesto pendiente de abrir</string>
    <string name="claim_pending_lbl">Reclamacion pendiente de abrir</string>
    <string name="voting_pending_lbl">Votación pendiente de abrir</string>
    <string name="manifest_closed_lbl">Manifiesto cerrado</string>
    <string name="claim_closed_lbl">Reclamación cerrada</string>
    <string name="voting_closed_lbl">Votación cerrada</string>
    <string name="manifest_open_lbl">Manifiesto abierto, quedan %1$s horas</string>
    <string name="claim_open_lbl">Reclamación abierta, quedan %1$s horas</string>
    <string name="voting_open_lbl">Votación abierta, quedan %1$s horas</string>
    <string name="already_voted_lbl">Usted ha elegido en este asunto la opción \'%1$s\'</string>
    <string name="closed_upper_lbl">CERRADO</string>
    <string name="author_lbl">Publicado por</string>
    <string name="inicio_lbl">Inicio</string>
    <string name="fin_lbl">Fin</string>
    <string name="remain_lbl">Quedan %1$s horas</string>
    <string name="option_selected_msg">Seleccionada opción \'%1$s\'</string>
    <string name="voting_system_lbl">Sistema de Votación</string>
    <string name="voting_drop_down_lbl">Votaciones</string>
    <string name="claims_drop_down_lbl">Reclamaciones</string>
    <string name="manifiests_drop_down_lbl">Manifiestos</string>
    <string name="unknown_drop_down_lbl">Sistema desconocido</string>
    <string name="unknown_event_state_lbl">Evento de tipo desconocido</string>
    <string name="subject_lbl">Asunto</string>
    <string name="menuSync">Sincronizar</string>
    <string name="processing_lbl">Procesando</string>
    <string name="publish_voting_caption">Publicando votación</string>
    <string name="publish_claim_caption">Publicando reclamación</string>
    <string name="publish_manifest_caption">Publicando manifiesto</string>
    <string name="publishing_document_msg">Publicando documento...</string>
    <string name="publish_claim_OK_prefix_msg">La reclamación</string>
    <string name="publish_voting_OK_prefix_msg">La votación</string>
    <string name="publish_manifest_OK_prefix_msg">El manifiesto</string>
    <string name="publish_document_OK_sufix_msg">se ha publicado correctamente</string>
    <string name="publish_document_ERROR_msg">Error publicando el documento</string>
    <string name="publish_document_lbl">Publicar documento</string>
    <string name="publish_voting_lbl">Publicar votación</string>
    <string name="publish_manifest_lbl">Publicar manifiesto</string>
    <string name="publish_claim_lbl">Publicar reclamación</string>
    <string name="loading_html_msg">Cargando página, por favor espere</string>
    <string name="pdf_signed_by_lbl">Firmado electrónicamente por</string>
    <string name="ASOCIAR_CENTRO_CONTROL_SMIME">Asociando Centro de Control </string>
    <string name="CAMBIO_ESTADO_CENTRO_CONTROL_SMIME">Cambiando estado de Centro de Control</string>
    <string name="CONTROL_CENTER_CONECTION_ERROR_MSG">Problemas conectando con el centro de control. Por favor, inténtelo mas tarde</string>
    <string name="SOLICITUD_COPIA_SEGURIDAD">Solicitud de copia de seguridad</string>
    <string name="PUBLICACION_MANIFIESTO_PDF">Publicación de documento para recoger firmas</string>
    <string name="FIRMA_MANIFIESTO_PDF">Firma de manifiesto</string>
    <string name="PUBLICACION_RECLAMACION_SMIME">Publicación de documento de reclamación</string>
    <string name="FIRMA_RECLAMACION_SMIME">Enviando reclamación</string>
    <string name="PUBLICACION_VOTACION_SMIME">Publicación de documento de votación</string>
    <string name="CANCELAR_EVENTO">Cancelar evento</string>
    <string name="errorOperacionNoEncontrada">Operación desconocida</string>
    <string name="errorDatosEvento">Errores en datos del evento</string>
    <string name="errorCodigoEstadoNoEncontrado">Falta código de estado</string>
    <string name="errorEmail">Debe proporcionar una dirección de correo válida</string>
    <string name="errorDatosCancelacionEvento">Error en los datos de cancelación de evento</string>
    <string name="errorDestinatarioNoEncontrado">Falta el nombre de destinatario del documento firmado</string>
    <string name="open_voting_lbl">Abiertas</string>
    <string name="pending_voting_lbl">Pendientes</string>
    <string name="closed_voting_lbl">Cerradas</string>
    <string name="open_claim_lbl">Abiertas</string>
    <string name="pending_claim_lbl">Pendientes</string>
    <string name="closed_claim_lbl">Cerradas</string>
    <string name="open_manifest_lbl">Abiertos</string>
    <string name="pending_manifest_lbl">Pendientes</string>
    <string name="closed_manifest_lbl">Cerrados</string>
    <string name="unknown_lbl">... DESCONOCIDO ...</string>
    <string name="panel_principal_lbl">Panel principal</string>
    <string name="query_hint_lbl">Buscar...</string>
    <string name="search_hint">Buscar...</string>
	<string name="guardar_recibo_voto_label">Guardar recibo</string>
	<string name="remove_receipt_lbl">Borrar recibo</string>
	<string name="remove_receipt_msg">¿Seguro que desea borrar recibo?</string>
    <string name="search_label"></string>
    <string name="search_invoke">Búsquedas</string>
    <string name="empty_search_lbl">Consulta sin resultados</string>
	<string name="lockscreen_sim_unlock_progress_dialog_message">lockscreen sim unlock progress dialog message</string>
	<string name="keyguard_password_enter_pin_code">Introduzca el código PIN de votación</string>
	<string name="keyguard_password_enter_first_pin_code">Introduzca el código PIN que deberá introducir en cada votación</string>
	<string name="pin_dialog_Caption">PIN de certificado de voto</string>
	<string name="invalidPin">Código PIN inválido</string>
	<string name="pin_short">Código PIN debe tener al menos %1$d caracteres</string>
	<string name="enter_pin_import_cert_msg">Introduzca el PIN que eligió al solicitar el certificado</string>
	<string name="password_mismatch">Los códigos PIN no coinciden. Inténtelo de nuevo</string>
	<string name="repeat_password">Vuelva a introducir el código PIN</string>
	<string name="nif_error">NIF con errores. Por favor vuelva a intentarlo</string>
	<string name="givenname_missing_msg">Introduzca el nombre</string>
	<string name="surname_missing_msg">Introduzca los apellidos</string>
	<string name="searchLabel">Buscar</string>
	<string name="app_unstable_msg">La aplicación tiene errores graves, por favor, vuelva a instalarla</string>
	<string name="vote_cert_request_error_msg">No existe ningún certificado de voto</string>
    <string name="operations_lbl">Operaciones</string>
    <string name="app_name">Votaciones</string>
    <string name="request_cert_msg">Tramitando solicitud</string>
    <string name="alert_exception_caption">Excepción!</string>
    <string name="cancel_back_msg">Pulsar \'atrás\' para cancelar</string>
    <string name="connecting_caption">Conectando...</string>
    <string name="cert_state_msg">Comprobando el estado de la solicitud de certificado</string>
    <string name="cert_downloaded_msg">El certificado de usuario está disponible</string>
    <string name="request_msg_subject">[SOLICITUD ACCESO]-%1$s</string>
    <string name="vote_msg_subject">[VOTO]</string>
    <string name="cancel_vote_msg_subject">[ANULACION VOTO]</string>
    <string name="canceled_lbl">ANULADO</string>
    <string name="cancel_vote_result_msg">Su voto para el asunto \'%1$s\' ha sido anulado.
	Puede volver votar de nuevo.</string>
    <string name="saved_cancel_vote_recepit_msg">Puede encontrar el recibo de la cancelación
	de este voto en la lista de recibos.</string>
    <string name="open_cancel_vote_receipt_lbl">Abrir recibo de cancelación</string>
    <string name="pin_error_msg">¿Seguro que la contraseña es correcta?</string>
    <string name="low_memory_msg">Memoria baja</string>
    <string name="sign_send_msg">Firmar y enviar</string>
    <string name="voted_lbl">Seleccionada opción</string>
    <string name="cancel_vote_lbl">Anular voto</string>
    <string name="open_recepit_lbl">Abrir recibo</string>
    <string name="cancel_vote_msg">Si continua anulará su voto</string>
    <string name="save_receipt_lbl">Guardar recibo de voto</string>
    <string name="app_name_lbl">Aplicación de votación</string>
    <string name="label_eventos">Eventos</string>
    <string name="label_evento">Evento</string>
    <string name="solicitud_csr">Solicitud CSR</string>
    <string name="enviarVoto">Enviar Voto</string>
    <string name="receipt_error_msg">Error validando recibo de voto</string>
    <string name="cert_not_found_caption">Falta certificado de votación</string>
    <string name="cert_not_found_msg">Para poder votar y firmar documentos debe tener instalado un certificado</string>
    <string name="lanzarServicio">Lanzar Servicio</string>
    <string name="eventos_no_encontrados_message">No se han encontrado eventos</string>
    <string name="menu_actualizar">Actualizar</string>
    <string name="menu_solicitar_certificado">Solicitar certificado</string>
    <string name="menu_receipt_list">Lista de recibos</string>
    <string name="receipt_list_screen_caption">Recibos guardados por el usuario</string>
    <string name="receipt_options_dialog_msg">Opciones disponibles para el recibo</string>
    <string name="canceling_vote_caption">Anulando voto</string>
    <string name="canceling_access_request_msg">Problemas con el servicio, por favor inténtelo mas tarde.</string>
    <string name="no_receipts">No tiene guardado ningún recibo</string>
    <string name="options_lbl">Opciones</string>
    <string name="solicitud_certificado_usuario_activity_text">No dispone de ningún 
        certificado con el que poder acceder a los servicios. Para poder votar debe solicitar
        un certificado de usuario. ¿Desea solicitar el certificado?</string>
    <string name="cert_data_confirm_msg"><![CDATA[<b>Nombre: </b>%1$s<br/>
        <b>Apellidos: </b>%2$s<br/>
        <b>Nif: </b>%3$s]]></string>
    <string name="resultado_solicitud_certificado_activity"><![CDATA[Para poder votar necesita tener
        instalado un certificado.<br/><br/>Usted ya ha solicitado el certificado, ahora hace falta verificar
        su identidad, para ello puede presentarse en cualquiera de <br/><br/>
        <a href="%1$s"> las siguientes direcciones</a>]]></string>
    <string name="search_query_info_msg"><![CDATA[<b>Resultado de la busqueda</b>: %1$s]]></string>
    <string name="option_error_msg"><![CDATA[<html>La opción del recibo no coincide con la del voto.
        <br/> ¿Desea anular la operación?</html>]]></string>
    <string name="vote_ok_msg"><![CDATA[En el evento \'%1$s\' usted ha elegido la opción \'%2$s\']]></string>
    <string name="vote_repeated_msg"><![CDATA[Ya había enviado un voto para la convocatoria \'%1$s\' en el que 
        había elegido la opción \'%2$s\']]></string>
    <string name="documents_lbl">Documentos</string>
    <string name="cancelar_label">Cancelar</string>
    <string name="solicitar_label">Solicitar</string>
    <string name="nif_label">Introduzca su NIF</string>
	<string name="user_cert_request_form_message_label">Cada vez que vote se le pedirá el código PIN que introducirá a continuación. Recuerde, si lo olvida tendrá que pedir otro certificado para poder votar.</string>
	<string name="given_name_lbl">Nombre</string>
	<string name="surname_lbl">Apellidos</string>
</resources>