<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      	android:id="@+id/scroll" 
    	android:layout_width="fill_parent"
        android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/given_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/given_name_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/given_name_edit"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/solicitar_button" 
        android:gravity="center_vertical|center_horizontal">
        	<requestFocus />
      </EditText>
      
     <TextView
        android:id="@+id/surname_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/surname_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />
             
    <EditText
        android:id="@+id/surname_edit"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/solicitar_button" 
        android:gravity="center_vertical|center_horizontal">
      </EditText>
    
    <TextView
        android:id="@+id/nif_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/nif_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
            
    <EditText
        android:id="@+id/nif_edit"
        android:layout_height="wrap_content"
        android:layout_width="240dp"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/solicitar_button" 
        android:gravity="center_vertical|center_horizontal">
      </EditText>
        
	<TextView
        android:id="@+id/nif_password_message"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"
        android:text="@string/user_cert_request_form_message_label"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
   	    android:layout_marginTop="15dip">

        <Button
            android:id="@+id/cancelar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dip"
            android:layout_weight="0.32"
            android:drawableLeft="@drawable/cancel_22x22"
            android:text="@string/cancelar_label"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/solicitar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="30dp"
            android:layout_weight="0.43"
            android:drawableLeft="@drawable/accept_22x22"
            android:text="@string/solicitar_label"
            android:textStyle="bold" />

    </LinearLayout>
    
</LinearLayout>
</ScrollView>