<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:foreground="@drawable/shape_window_dim" >


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subject_evento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="23sp"
                android:textColor="@color/event_subject"
                android:onClick="onClickSubject"
                android:clickable="true"
                android:text="@string/label_evento" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:gravity="center"/>

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/scroller"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fillViewport="true" >
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/contenedor_evento"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/eventvs_content"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:textSize="20sp"
                        android:layout_weight="1.0"/>

                    <Button
                        android:id="@+id/firmar_enviar_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0"
                        android:drawableLeft="@drawable/manifest_32"
                        android:text="@string/sign_send_msg" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout android:id="@+id/progressContainer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:gravity="center">
        <ProgressBar style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sending_data_lbl"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/event_progress_text_lbl"
            android:paddingTop="4dip"
            android:singleLine="true" />
    </LinearLayout>

</RelativeLayout>
